syntax = "proto3";

package stats.message;

import "google/protobuf/timestamp.proto";
import "stats/messages/action_type.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.stats.proto";

message UserActionProto {
  int64 user_id = 1;
  int64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}